--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -6,5 +9,5 @@
 
 body {
   font-size: 16px;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif, 'Bebas Neue';
 }
